objects/AdditionalAccountFields__c.object
<CustomObject>
    <description>SFDC1-785 This is a separate Object created for capturing fields that are a 1:1 relationship with Account but are not attributes that we would consider governing. Many of these fields originated from the multitude of fields found on the account form in Legacy IHS.</description>
    <fields>
        <fullName>AccountReference__c</fullName>
        <inlineHelpText>Lookup Reference of the account connected to the Additional Account Fields</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Additional Account Fields (Account)</relationshipLabel>
        <relationshipName>AdditionAccountFields</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>AccountingSystem__c</fullName>
        <description>SFDC-2751 - Additional Account Fields needed for PCM</description>
        <inlineHelpText>This field stores the list of Accounting system currently used by customer</inlineHelpText>
        <label>Accounting System</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Altareturn</fullName>
                </value>
                <value>
                    <fullName>Dynamo</fullName>
                </value>
                <value>
                    <fullName>eFront</fullName>
                </value>
                <value>
                    <fullName>Entrata</fullName>
                </value>
                <value>
                    <fullName>Equitrak</fullName>
                </value>
                <value>
                    <fullName>Excel</fullName>
                </value>
                <value>
                    <fullName>Homegrown</fullName>
                </value>
                <value>
                    <fullName>Investran</fullName>
                </value>
                <value>
                    <fullName>MRI</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Outsourced</fullName>
                </value>
                <value>
                    <fullName>Quickbooks</fullName>
                </value>
                <value>
                    <fullName>SimCorp</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>Yardi</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AdditionalMRMRelationshipManager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SFDC-1345 &quot;Additional MRM Relationship Manager&quot; Field under Support - MRM to Additional Account Fields</description>
        <label>Additional MRM Relationship Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>AdditionalMRMAdditionalAccountFields</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Advisor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SFDC - 2751 - Additional Account Fields needed for PCM</description>
        <inlineHelpText>This field stores the list of Advisor relationship for merger/acquisition activities</inlineHelpText>
        <label>Advisor</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Additional Account Fields (Advisor)</relationshipLabel>
        <relationshipName>AdditionalAccountFieldsAdvisor</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AssetClassProduct__c</fullName>
        <description>SFDC-4333 - Adding new Fields for AAF for GRRS</description>
        <label>Asset Class/Product</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CO</fullName>
                </value>
                <value>
                    <fullName>CRD</fullName>
                </value>
                <value>
                    <fullName>EQD</fullName>
                </value>
                <value>
                    <fullName>FXD</fullName>
                </value>
                <value>
                    <fullName>IRD</fullName>
                </value>
                <value>
                    <fullName>SFTR - BSB</fullName>
                </value>
                <value>
                    <fullName>SFTR - MARGIN</fullName>
                </value>
                <value>
                    <fullName>SFTR - MGLD</fullName>
                </value>
                <value>
                    <fullName>SFTR - REPO</fullName>
                </value>
                <value>
                    <fullName>SFTR - REUSE</fullName>
                </value>
                <value>
                    <fullName>SFTR - SLEB</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Auditor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SFDC - 2751 - Additional Account Fields needed for PCM</description>
        <inlineHelpText>This field stores the list of Tax Auditor relationship with this account</inlineHelpText>
        <label>Auditor</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Additional Account Fields (Auditor)</relationshipLabel>
        <relationshipName>AdditionalAccountFields</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BDWarehouseID__c</fullName>
        <description>SFDC-3929: It will provide a link/Unique Identifier between Salesforce and the sales performance of the clients and BD, software which we sell to clients, to identify usage, log-ins and satisfaction with the product. This will allow sales and management to have an end-to-end view of the client, being able to match their sales performance to product usage, and will be of particular assistance to account managers.</description>
        <inlineHelpText>The BD Warehouse ID is a reference to the unique identifier in the issuer security universe. This is managed by the Issuer Solutions [Ipreo (Core)] content team.</inlineHelpText>
        <label>BD Warehouse ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BackOfficeSystem__c</fullName>
        <description>SFDC1-785 Addition Account Fields - General Info</description>
        <label>Back Office System</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Advent</fullName>
                </value>
                <value>
                    <fullName>Advent APX</fullName>
                </value>
                <value>
                    <fullName>Advent Geneva</fullName>
                </value>
                <value>
                    <fullName>Asset Arena (Invest One)</fullName>
                </value>
                <value>
                    <fullName>Avaloq</fullName>
                </value>
                <value>
                    <fullName>Calypso</fullName>
                </value>
                <value>
                    <fullName>Clearwater</fullName>
                </value>
                <value>
                    <fullName>Curo Fund Services</fullName>
                </value>
                <value>
                    <fullName>Digia Asset Manager (Samstock)</fullName>
                </value>
                <value>
                    <fullName>DST GPS</fullName>
                </value>
                <value>
                    <fullName>DST - HiPort</fullName>
                </value>
                <value>
                    <fullName>Eagle Price</fullName>
                </value>
                <value>
                    <fullName>Eagle SRM</fullName>
                </value>
                <value>
                    <fullName>Eagle STAR</fullName>
                </value>
                <value>
                    <fullName>Finacle</fullName>
                </value>
                <value>
                    <fullName>Findur Openlink</fullName>
                </value>
                <value>
                    <fullName>Finnova</fullName>
                </value>
                <value>
                    <fullName>FMC</fullName>
                </value>
                <value>
                    <fullName>Geneva</fullName>
                </value>
                <value>
                    <fullName>Indus Valley Partners (I.V.P.)</fullName>
                </value>
                <value>
                    <fullName>Internal</fullName>
                </value>
                <value>
                    <fullName>Internally Developed</fullName>
                </value>
                <value>
                    <fullName>InvestOne</fullName>
                </value>
                <value>
                    <fullName>Linedata - Chorus</fullName>
                </value>
                <value>
                    <fullName>Linedata - ICON</fullName>
                </value>
                <value>
                    <fullName>M.I.K</fullName>
                </value>
                <value>
                    <fullName>Maximus</fullName>
                </value>
                <value>
                    <fullName>Misys Summit</fullName>
                </value>
                <value>
                    <fullName>mPower</fullName>
                </value>
                <value>
                    <fullName>Multifonds</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CRMSystem__c</fullName>
        <description>SFDC-2751 - Additional Account Fields needed for PCM</description>
        <inlineHelpText>This field stores the list of CRM system currently used by customer</inlineHelpText>
        <label>CRM System</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Affinity</fullName>
                </value>
                <value>
                    <fullName>AltaReturn</fullName>
                </value>
                <value>
                    <fullName>Backstop</fullName>
                </value>
                <value>
                    <fullName>DealCloud</fullName>
                </value>
                <value>
                    <fullName>Domo</fullName>
                </value>
                <value>
                    <fullName>Dynamo</fullName>
                </value>
                <value>
                    <fullName>eFront</fullName>
                </value>
                <value>
                    <fullName>eVenture</fullName>
                </value>
                <value>
                    <fullName>Homegrown</fullName>
                </value>
                <value>
                    <fullName>Juniper Square</fullName>
                </value>
                <value>
                    <fullName>Microsoft Dynamic</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>ProsperWorks</fullName>
                </value>
                <value>
                    <fullName>Salesforce</fullName>
                </value>
                <value>
                    <fullName>Sugar</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CollateralDeliveryDate__c</fullName>
        <description>SFDC1-523 - Additional Account Fields - MSF Data</description>
        <inlineHelpText>Date MSF started receiving the Collateral data from the customer</inlineHelpText>
        <label>Collateral Delivery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CollateralStatus__c</fullName>
        <description>SFDC1-523 - Additional Account Fields - MSF Data</description>
        <inlineHelpText>Status of MSF Data Onboarding Process of the Collateral data from this customer (if applicable)</inlineHelpText>
        <label>Collateral Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Agreed in principle</fullName>
                </value>
                <value>
                    <fullName>Contacted</fullName>
                </value>
                <value>
                    <fullName>Delivered via Pirum</fullName>
                </value>
                <value>
                    <fullName>Delivered via triparty agent</fullName>
                </value>
                <value>
                    <fullName>Not contacted</fullName>
                </value>
                <value>
                    <fullName>Not interested</fullName>
                </value>
                <value>
                    <fullName>Onboarded</fullName>
                </value>
                <value>
                    <fullName>Partially onboarded</fullName>
                </value>
                <value>
                    <fullName>Work in progress</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Competitors__c</fullName>
        <description>SFDC-3923: This field captures the list of competitors on the accounts cappitech is marketing in their marketing efforts.</description>
        <inlineHelpText>List of competitors on Cappitech&apos;s account</inlineHelpText>
        <label>Competitors</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustomerReportingSystem__c</fullName>
        <description>SFDC1-785 Addition Account Fields - General Info</description>
        <inlineHelpText>Reporting system used by the customer</inlineHelpText>
        <label>Customer Reporting System</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Actuate</fullName>
                </value>
                <value>
                    <fullName>Business Objects</fullName>
                </value>
                <value>
                    <fullName>Cognos</fullName>
                </value>
                <value>
                    <fullName>Crystal</fullName>
                </value>
                <value>
                    <fullName>DeskNet</fullName>
                </value>
                <value>
                    <fullName>Eagle - Client Reporting</fullName>
                </value>
                <value>
                    <fullName>Equipos</fullName>
                </value>
                <value>
                    <fullName>Fundworks</fullName>
                </value>
                <value>
                    <fullName>IBI Webfocus</fullName>
                </value>
                <value>
                    <fullName>Information Builders</fullName>
                </value>
                <value>
                    <fullName>Internally Developed</fullName>
                </value>
                <value>
                    <fullName>Kurtosys</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Proprietary</fullName>
                </value>
                <value>
                    <fullName>Simcorp Dimension</fullName>
                </value>
                <value>
                    <fullName>SS&amp;C Pages</fullName>
                </value>
                <value>
                    <fullName>SSRS</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>Vermillion</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DataAggregationRights__c</fullName>
        <description>SFDC - 2751 - Additional Account Fields needed for PCM</description>
        <inlineHelpText>This field stores the Picklist value to track if we have the rights to aggregate customer data on IHS Markit platform</inlineHelpText>
        <label>Data Aggregation Rights</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DataComments__c</fullName>
        <description>SFDC1-523 - Additional Account Fields - MSF Data</description>
        <inlineHelpText>Comments/Notes field from MSF Data Onboarding team</inlineHelpText>
        <label>Data Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DataContractualTerms__c</fullName>
        <description>SFDC1-523 - Additional Account Fields - MSF Data</description>
        <inlineHelpText>Contractual terms that the customer is required to comply to in relation to their contract for MSF for data submission</inlineHelpText>
        <label>Data Contractual Terms</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DataFeeds__c</fullName>
        <description>SFDC1-785 Addition Account Fields - General Info</description>
        <inlineHelpText>Datafeeds ingested by the customer</inlineHelpText>
        <label>Data Feeds</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Alacra</fullName>
                </value>
                <value>
                    <fullName>Argos</fullName>
                </value>
                <value>
                    <fullName>Avox</fullName>
                </value>
                <value>
                    <fullName>Barclays</fullName>
                </value>
                <value>
                    <fullName>Barclays Point</fullName>
                </value>
                <value>
                    <fullName>Bloomberg</fullName>
                </value>
                <value>
                    <fullName>Bloomberg (ref/corp action/ownership)</fullName>
                </value>
                <value>
                    <fullName>Bloomberg (sec, equity &amp; fixed price)</fullName>
                </value>
                <value>
                    <fullName>Bloomberg BO</fullName>
                </value>
                <value>
                    <fullName>Bloomberg PS</fullName>
                </value>
                <value>
                    <fullName>CDS</fullName>
                </value>
                <value>
                    <fullName>CME</fullName>
                </value>
                <value>
                    <fullName>Computershare</fullName>
                </value>
                <value>
                    <fullName>Copps Clark</fullName>
                </value>
                <value>
                    <fullName>Credit Module</fullName>
                </value>
                <value>
                    <fullName>Credit Risk</fullName>
                </value>
                <value>
                    <fullName>Datastream</fullName>
                </value>
                <value>
                    <fullName>Dominion Credit Ratings</fullName>
                </value>
                <value>
                    <fullName>Dun and Bradstreet</fullName>
                </value>
                <value>
                    <fullName>EFA price</fullName>
                </value>
                <value>
                    <fullName>Eurex</fullName>
                </value>
                <value>
                    <fullName>Exshare</fullName>
                </value>
                <value>
                    <fullName>Factset</fullName>
                </value>
                <value>
                    <fullName>Fitch</fullName>
                </value>
                <value>
                    <fullName>FTID</fullName>
                </value>
                <value>
                    <fullName>Heren</fullName>
                </value>
                <value>
                    <fullName>ICAP Broker Pages</fullName>
                </value>
                <value>
                    <fullName>ICB (sector details)</fullName>
                </value>
                <value>
                    <fullName>IDC</fullName>
                </value>
                <value>
                    <fullName>IDC (corp actions)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DataManagementSystem__c</fullName>
        <description>SFDC1-785 Addition Account Fields - General Info</description>
        <label>Data Management System</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Ab Initio</fullName>
                </value>
                <value>
                    <fullName>AIM - Gain Software</fullName>
                </value>
                <value>
                    <fullName>Asset Control - AC+</fullName>
                </value>
                <value>
                    <fullName>Asset Control - ACInvest</fullName>
                </value>
                <value>
                    <fullName>Biztalk</fullName>
                </value>
                <value>
                    <fullName>Charles River Data Service</fullName>
                </value>
                <value>
                    <fullName>Eagle Pace for Warehouse</fullName>
                </value>
                <value>
                    <fullName>Eagle SRM or Pricing</fullName>
                </value>
                <value>
                    <fullName>Golden Source</fullName>
                </value>
                <value>
                    <fullName>Indus Valley Partners (I.V.P.)</fullName>
                </value>
                <value>
                    <fullName>Informatica</fullName>
                </value>
                <value>
                    <fullName>Intalus</fullName>
                </value>
                <value>
                    <fullName>Internally developed system</fullName>
                </value>
                <value>
                    <fullName>M.I.K</fullName>
                </value>
                <value>
                    <fullName>Markit EDM</fullName>
                </value>
                <value>
                    <fullName>Netik</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Paladyne</fullName>
                </value>
                <value>
                    <fullName>PolarLake</fullName>
                </value>
                <value>
                    <fullName>Princeton</fullName>
                </value>
                <value>
                    <fullName>Reference Data Factory</fullName>
                </value>
                <value>
                    <fullName>Simcorp Dimension</fullName>
                </value>
                <value>
                    <fullName>Smartco</fullName>
                </value>
                <value>
                    <fullName>Sterci</fullName>
                </value>
                <value>
                    <fullName>ThompsonReuters EDM - TREP</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>Xenomorph</fullName>
                </value>
                <value>
                    <fullName>Zema</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DataProvision__c</fullName>
        <description>SFDC1-523 - Additional Account Fields - MSF Data</description>
        <inlineHelpText>To identify if this customer provides us with Securities Finance Data  - i.e. are they contributing to the database</inlineHelpText>
        <label>Data Provision</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DataWarehouse__c</fullName>
        <description>SFDC1-785 Addition Account Fields - General Info</description>
        <label>Data Warehouse</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Asset Control</fullName>
                </value>
                <value>
                    <fullName>Eagle PACE</fullName>
                </value>
                <value>
                    <fullName>EDM Data Store</fullName>
                </value>
                <value>
                    <fullName>Indus Valley Partners (I.V.P.)</fullName>
                </value>
                <value>
                    <fullName>Internally Developed Warehouse</fullName>
                </value>
                <value>
                    <fullName>M.I.K</fullName>
                </value>
                <value>
                    <fullName>Netik</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Oracle (MDS)</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Teradata</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>Xenomorph</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DateOnboarded__c</fullName>
        <description>SFDC1-523 - Additional Account Fields - MSF Data</description>
        <inlineHelpText>Date MSF started receiving the customer&apos;s data to ingest into our database (into production)</inlineHelpText>
        <label>Date Onboarded</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EDMSalesperson__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SFDC1-5452 EDM Salesperson</description>
        <inlineHelpText>Lookup to a User that indicates the EDM Salesperson for the Account.</inlineHelpText>
        <label>EDM Salesperson</label>
        <referenceTo>User</referenceTo>
        <relationshipName>EDMSalesAccounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ExchangeCountryTerritory__c</fullName>
        <description>SFDC-3929: IPREO field</description>
        <inlineHelpText>Indicates the country location of the exchange that this account and security primarily trade on.</inlineHelpText>
        <label>Exchange Country/Territory</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Exchange__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Argentina</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Austria</fullName>
                </value>
                <value>
                    <fullName>Bahrain</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Bermuda</fullName>
                </value>
                <value>
                    <fullName>Botswana</fullName>
                </value>
                <value>
                    <fullName>Brazil</fullName>
                </value>
                <value>
                    <fullName>Bulgaria</fullName>
                </value>
                <value>
                    <fullName>Canada</fullName>
                </value>
                <value>
                    <fullName>Chile</fullName>
                </value>
                <value>
                    <fullName>Colombia</fullName>
                </value>
                <value>
                    <fullName>Czech Republic</fullName>
                </value>
                <value>
                    <fullName>Denmark</fullName>
                </value>
                <value>
                    <fullName>Egypt</fullName>
                </value>
                <value>
                    <fullName>Finland</fullName>
                </value>
                <value>
                    <fullName>France</fullName>
                </value>
                <value>
                    <fullName>Germany</fullName>
                </value>
                <value>
                    <fullName>Greece</fullName>
                </value>
                <value>
                    <fullName>Hong Kong</fullName>
                </value>
                <value>
                    <fullName>Hungary</fullName>
                </value>
                <value>
                    <fullName>India</fullName>
                </value>
                <value>
                    <fullName>Indonesia</fullName>
                </value>
                <value>
                    <fullName>Ireland</fullName>
                </value>
                <value>
                    <fullName>Israel</fullName>
                </value>
                <value>
                    <fullName>Italy</fullName>
                </value>
                <value>
                    <fullName>Japan</fullName>
                </value>
                <value>
                    <fullName>Jordan</fullName>
                </value>
                <value>
                    <fullName>Kuwait</fullName>
                </value>
                <value>
                    <fullName>Lebanon</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>